# git_OCT

./: CMakeCache.txt  CMakeLists.txt  ClassII_Scatt.out  ClassII_ScattFilt.out  ClassI_Scatt.out  ClassI_ScattFilt.out  Makefile  TMC_OCTv3  cmake_install.cmake
JUNYAO_INPUT/: Run  ellipsoid_and_two_spheres_60_degree.opt
input/Ellipsoid+2Spheres/: BiasStartup.mci  Ellipsoid+2Spheres.opt
src/: tmcoct  tmcoct.h  tmcoct_bias.c  tmcoct_go.c  tmcoct_io.c  tmcoct_main.c  tmcoct_mesh.c  tmcoct_nr.c
utils/python_utils/: visualization_AScan.py
